Fix hmm and missingness with cross validation training

--- a/TrainModel.ipynb
+++ b/TrainModel.ipynb
@@ -138,7 +138,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifier.fit(X, Y, pid, T, \"models/c24_rw.pt\")"
+    "def subset_data(X, Y, pid, T, n_samples=1000, n_participants=20):\n",
+    "    np.random.seed(42)\n",
+    "\n",
+    "    if n_participants is not None:\n",
+    "        pids = np.random.choice(np.unique(pid), n_participants, replace=False)\n",
+    "        idx = np.isin(pid, pids)\n",
+    "\n",
+    "        X, Y, pid, T = X[idx], Y[idx], pid[idx], T[idx]\n",
+    "    \n",
+    "    if n_samples is not None:\n",
+    "        idx = np.random.choice(len(X), n_samples, replace=False)\n",
+    "        X, Y, pid, T = X[idx], Y[idx], pid[idx], T[idx]\n",
+    "    \n",
+    "    return X, Y, pid, T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X, Y, pid, T = subset_data(X, Y, pid, T, None, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifier.fit(X, Y, pid, T, f\"models/c24_rw_{datetime.now().strftime('%Y%m%d')}.pt\", n_splits=5)"
    ]
   },
   {
