Add helpful notebook for Evaluation of model

--- a/TrainModel.ipynb
+++ b/TrainModel.ipynb
@@ -27,6 +27,8 @@
     "import hashlib\n",
     "\n",
     "sys.path.append(\"src\")\n",
+    "from actinet.actinet import read\n",
+    "from actinet.accPlot import plotTimeSeries\n",
     "from actinet.models import ActivityClassifier\n",
     "from actinet.prepare import load_all_and_make_windows\n",
     "\n",
@@ -92,7 +94,7 @@
     "\n",
     "else:\n",
     "    X, Y, T, pid = load_all_and_make_windows(\n",
-    "        datafiles=glob(DATAFILES), \n",
+    "        datafiles=glob(DATAFILES),\n",
     "        annofile=ANNOFILE, \n",
     "        out_dir=SAVEFOLDER, \n",
     "        anno_label=\"Walmsley2020\", # Choose between WillettsSpecific2018, WillettsMET2018, DohertySpecific2018,...\n",
@@ -269,6 +271,42 @@
    "source": [
     "hashlib.md5(open(classifier_file_name,'rb').read()).hexdigest()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data, info = read(\"data/sample.cwa.gz\", resample_hz=None, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = loaded_classifier.predict_from_frame(data, 100, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = plotTimeSeries(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = plotTimeSeries(loaded_classifier.predict_from_frame(data, 100, False))"
+   ]
   }
  ],
  "metadata": {
@@ -287,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
