Evaluate model to compare actinet to bbaa

--- a/EvaluateModel.ipynb
+++ b/EvaluateModel.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The purpose of this section is to evaluate the model performance compare to different preprocessing approaches, as well as model types."
+    "# Evaluate Model"
    ]
   },
   {
@@ -14,20 +14,40 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from glob import glob\n",
     "import sys\n",
     "import shutil\n",
     "import os\n",
+    "from sklearn.metrics import accuracy_score, f1_score, cohen_kappa_score\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from imblearn.ensemble import BalancedRandomForestClassifier\n",
     "\n",
     "sys.path.append(\"src\")\n",
     "from actinet.models import ActivityClassifier\n",
-    "from actinet.prepare import load_all_and_make_windows\n",
-    "from actinet.evaluate import evaluate\n",
+    "from actinet.prepare import load_all_and_make_windows, extract_accelerometer_features, \\\n",
+    "    prepare_accelerometer_data\n",
+    "from actinet.evaluate import evaluate_preprocessing, evaluate_models\n",
     "\n",
     "WINSEC = 30 # seconds\n",
     "SAMPLE_RATE = 100 # Hz\n",
     "RESAMPLE_RATE = 30 # Hz\n",
-    "N_JOBS = 8 # Set to higher number for quicker execution, but don't exceed max."
+    "N_JOBS = 8 # Set to higher number for quicker execution, but don't exceed max.\n",
+    "\n",
+    "DATAFILES = f\"data/capture24/P[0-9][0-9][0-9].csv.gz\"\n",
+    "ANNOFILE = f\"data/capture24/annotation-label-dictionary.csv\"\n",
+    "SAVEFOLDER = f\"data/capture24\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evalate pre-processing steps\n",
+    "\n",
+    "The purpose of this section is to evaluate the model performance compare to different preprocessing approaches, as well as model types."
    ]
   },
   {
@@ -42,11 +62,11 @@
     "ANNOFILE = f\"data/capture24/annotation-label-dictionary.csv\"\n",
     "SAVEFOLDER = f\"data/capture24\"\n",
     "\n",
-    "if len(glob(f\"{SAVEFOLDER}/downsampling_nn_lowpass_None/*.npy\")) == 4:\n",
-    "    X_nn = np.load(f\"{SAVEFOLDER}/downsampling_nn_lowpass_None/X.npy\")\n",
-    "    Y_nn = np.load(f\"{SAVEFOLDER}/downsampling_nn_lowpass_None/Y.npy\")\n",
-    "    T_nn = np.load(f\"{SAVEFOLDER}/downsampling_nn_lowpass_None/T.npy\")\n",
-    "    pid_nn = np.load(f\"{SAVEFOLDER}/downsampling_nn_lowpass_None/pid.npy\")\n",
+    "if len(glob(f\"{SAVEFOLDER}/prepared/downsampling_nn_lowpass_None/*.npy\")) == 4:\n",
+    "    X_nn = np.load(f\"{SAVEFOLDER}/prepared/downsampling_nn_lowpass_None/X.npy\")\n",
+    "    Y_nn = np.load(f\"{SAVEFOLDER}/prepared/downsampling_nn_lowpass_None/Y.npy\")\n",
+    "    T_nn = np.load(f\"{SAVEFOLDER}/prepared/downsampling_nn_lowpass_None/T.npy\")\n",
+    "    pid_nn = np.load(f\"{SAVEFOLDER}/prepared/downsampling_nn_lowpass_None/pid.npy\")\n",
     "\n",
     "else:\n",
     "    X_nn, Y_nn, T_nn, pid_nn = load_all_and_make_windows(\n",
@@ -75,11 +95,11 @@
     "ANNOFILE = f\"data/capture24/annotation-label-dictionary.csv\"\n",
     "SAVEFOLDER = f\"data/capture24\"\n",
     "\n",
-    "if len(glob(f\"{SAVEFOLDER}/downsampling_nn_lowpass_15/*.npy\")) == 4:\n",
-    "    X_nn15 = np.load(f\"{SAVEFOLDER}/downsampling_nn_lowpass_15/X.npy\")\n",
-    "    Y_nn15 = np.load(f\"{SAVEFOLDER}/downsampling_nn_lowpass_15/Y.npy\")\n",
-    "    T_nn15 = np.load(f\"{SAVEFOLDER}/downsampling_nn_lowpass_15/T.npy\")\n",
-    "    pid_nn15 = np.load(f\"{SAVEFOLDER}/downsampling_nn_lowpass_15/pid.npy\")\n",
+    "if len(glob(f\"{SAVEFOLDER}/prepared/downsampling_nn_lowpass_15/*.npy\")) == 4:\n",
+    "    X_nn15 = np.load(f\"{SAVEFOLDER}/prepared/downsampling_nn_lowpass_15/X.npy\")\n",
+    "    Y_nn15 = np.load(f\"{SAVEFOLDER}/prepared/downsampling_nn_lowpass_15/Y.npy\")\n",
+    "    T_nn15 = np.load(f\"{SAVEFOLDER}/prepared/downsampling_nn_lowpass_15/T.npy\")\n",
+    "    pid_nn15 = np.load(f\"{SAVEFOLDER}/prepared/downsampling_nn_lowpass_15/pid.npy\")\n",
     "\n",
     "else:\n",
     "    X_nn15, Y_nn15, T_nn15, pid_nn15 = load_all_and_make_windows(\n",
@@ -108,11 +128,11 @@
     "ANNOFILE = f\"data/capture24/annotation-label-dictionary.csv\"\n",
     "SAVEFOLDER = f\"data/capture24\"\n",
     "\n",
-    "if len(glob(f\"{SAVEFOLDER}/downsampling_linear_lowpass_None/*.npy\")) == 4:\n",
-    "    X_linear = np.load(f\"{SAVEFOLDER}/downsampling_linear_lowpass_None/X.npy\")\n",
-    "    Y_linear = np.load(f\"{SAVEFOLDER}/downsampling_linear_lowpass_None/Y.npy\")\n",
-    "    T_linear = np.load(f\"{SAVEFOLDER}/downsampling_linear_lowpass_None/T.npy\")\n",
-    "    pid_linear = np.load(f\"{SAVEFOLDER}/downsampling_linear_lowpass_None/pid.npy\")\n",
+    "if len(glob(f\"{SAVEFOLDER}/prepared/downsampling_linear_lowpass_None/*.npy\")) == 4:\n",
+    "    X_linear = np.load(f\"{SAVEFOLDER}/prepared/downsampling_linear_lowpass_None/X.npy\")\n",
+    "    Y_linear = np.load(f\"{SAVEFOLDER}/prepared/downsampling_linear_lowpass_None/Y.npy\")\n",
+    "    T_linear = np.load(f\"{SAVEFOLDER}/prepared/downsampling_linear_lowpass_None/T.npy\")\n",
+    "    pid_linear = np.load(f\"{SAVEFOLDER}/prepared/downsampling_linear_lowpass_None/pid.npy\")\n",
     "\n",
     "else:\n",
     "    X_linear, Y_linear, T_linear, pid_linear = load_all_and_make_windows(\n",
@@ -158,7 +178,7 @@
     "    verbose=True\n",
     ")\n",
     "\n",
-    "Y_pred_nn = evaluate(classifier_nn, X_nn, Y_nn, pid_nn, T_nn, \n",
+    "Y_pred_nn = evaluate_preprocessing(classifier_nn, X_nn, Y_nn, pid_nn, T_nn, \n",
     "                     f\"{models_path}/downsampling_nn_lowpass_None_{{}}.pt\", True)"
    ]
   },
@@ -175,7 +195,7 @@
     "    verbose=True\n",
     ")\n",
     "\n",
-    "Y_pred_nn15 = evaluate(classifier_nn15, X_nn15, Y_nn15, pid_nn15, T_nn15, \n",
+    "Y_pred_nn15 = evaluate_preprocessing(classifier_nn15, X_nn15, Y_nn15, pid_nn15, T_nn15, \n",
     "                       f\"{models_path}/downsampling_nn_lowpass_15_{{}}.pt\", True)"
    ]
   },
@@ -192,7 +212,7 @@
     "    verbose=True\n",
     ")\n",
     "\n",
-    "Y_pred_linear = evaluate(classifier_linear, X_linear, Y_linear, pid_linear, T_linear,\n",
+    "Y_pred_linear = evaluate_preprocessing(classifier_linear, X_linear, Y_linear, pid_linear, T_linear,\n",
     "                         f\"{models_path}/downsampling_linear_lowpass_None_{{}}.pt\", True)"
    ]
   },
@@ -202,10 +222,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.metrics import accuracy_score, f1_score, cohen_kappa_score\n",
-    "\n",
     "data = {\n",
     "    'nearest neighbour no filter': {'y': Y_nn, 'y_pred': Y_pred_nn, 'pid': pid_nn},\n",
     "    'nearest neighbour 15Hz lp filter': {'y': Y_nn15, 'y_pred': Y_pred_nn15, 'pid': pid_nn15},\n",
@@ -264,12 +280,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.metrics import ConfusionMatrixDisplay\n",
-    "\n",
-    "\n",
     "# Plot confusion matrix for each model\n",
     "for model, model_data in data.items():\n",
     "    y_true = model_data['y']\n",
@@ -280,7 +290,6 @@
     "    \n",
     "    # Plot confusion matrix\n",
     "    plt.figure(figsize=(8, 8))\n",
-    "    sns.set(font_scale=1.2)\n",
     "    sns.heatmap(cm, annot=True, fmt='.3f', cbar=False)\n",
     "    plt.title(f'Confusion Matrix - {model}')\n",
     "    plt.xlabel('Predicted Label')\n",
@@ -291,6 +300,135 @@
     "\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate actinet against accelerometer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we extract the features each of the capture 24 files using the accelerometer package"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extract_accelerometer_features(n_jobs=N_JOBS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we prepare the participant accelerometer data into the expected shape, containing the X,Y,T and P"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accelerometer feature data prepared\n",
+    "if len(glob(f\"{SAVEFOLDER}/prepared/accelerometer/*.npy\")) == 4:\n",
+    "    X_bbaa = np.load(f\"{SAVEFOLDER}/prepared/accelerometer/X.npy\")\n",
+    "    Y_bbaa = np.load(f\"{SAVEFOLDER}/prepared/accelerometer/Y.npy\")\n",
+    "    T_bbaa = np.load(f\"{SAVEFOLDER}/prepared/accelerometer/T.npy\")\n",
+    "    P_bbaa = np.load(f\"{SAVEFOLDER}/prepared/accelerometer/pid.npy\")\n",
+    "\n",
+    "else:\n",
+    "    X_bbaa, Y_bbaa, T_bbaa, P_bbaa = prepare_accelerometer_data(ANNOFILE, SAVEFOLDER, N_JOBS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Actinet data prepared\n",
+    "if len(glob(f\"{SAVEFOLDER}/prepared/downsampling_linear_lowpass_None/*.npy\")) == 4:\n",
+    "    X_actinet = np.load(f\"{SAVEFOLDER}/prepared/downsampling_linear_lowpass_None/X.npy\")\n",
+    "    Y_actinet = np.load(f\"{SAVEFOLDER}/prepared/downsampling_linear_lowpass_None/Y.npy\")\n",
+    "    T_actinet = np.load(f\"{SAVEFOLDER}/prepared/downsampling_linear_lowpass_None/T.npy\")\n",
+    "    P_actinet = np.load(f\"{SAVEFOLDER}/prepared/downsampling_linear_lowpass_None/pid.npy\")\n",
+    "\n",
+    "else:\n",
+    "    X_actinet, Y_actinet, T_actinet, P_actinet = load_all_and_make_windows(\n",
+    "        datafiles=glob(DATAFILES), \n",
+    "        annofile=ANNOFILE, \n",
+    "        out_dir=SAVEFOLDER, \n",
+    "        anno_label=\"Walmsley2020\",\n",
+    "        sample_rate=SAMPLE_RATE,\n",
+    "        winsec=WINSEC,\n",
+    "        n_jobs=N_JOBS,\n",
+    "        downsampling_method=\"linear\",\n",
+    "        lowpass_hz=None,\n",
+    "        resample_rate=RESAMPLE_RATE,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluate model using 5 fold stratified group cross validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bbaa_classifier = BalancedRandomForestClassifier(\n",
+    "    n_estimators=3000,\n",
+    "    oob_score=True,\n",
+    "    sampling_strategy=\"not minority\",\n",
+    "    replacement=True,\n",
+    "    n_jobs=N_JOBS,\n",
+    "    random_state=42,\n",
+    "    verbose=1\n",
+    ")\n",
+    "\n",
+    "actinet_classifier = ActivityClassifier(\n",
+    "    labels = np.unique(Y_actinet),\n",
+    "    batch_size=1000,\n",
+    "    device=\"cuda:0\",\n",
+    "    verbose=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluate_models(\n",
+    "    actinet_classifier,\n",
+    "    bbaa_classifier,\n",
+    "    X_actinet,\n",
+    "    X_bbaa,\n",
+    "    Y_actinet,\n",
+    "    Y_bbaa,\n",
+    "    P_actinet,\n",
+    "    P_bbaa,\n",
+    "    T_actinet,\n",
+    "    T_bbaa,\n",
+    "    weights_path=\"models/evaluation_models/actinet_vs_bbaa_{}.pt\",\n",
+    "    out_dir=\"outputs/actinet_vs_bbaa\",\n",
+    "    verbose=True,\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
@@ -300,15 +438,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.9.18"
   }
  },
