evaluate model functionality

--- a/EvaluateModel.ipynb
+++ b/EvaluateModel.ipynb
@@ -24,6 +24,7 @@
     "import seaborn as sns\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from imblearn.ensemble import BalancedRandomForestClassifier\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
     "sys.path.append(\"src\")\n",
     "from actinet.models import ActivityClassifier\n",
@@ -390,7 +391,7 @@
    "outputs": [],
    "source": [
     "bbaa_classifier = BalancedRandomForestClassifier(\n",
-    "    n_estimators=3000,\n",
+    "    n_estimators=1000,\n",
     "    oob_score=True,\n",
     "    sampling_strategy=\"not minority\",\n",
     "    replacement=True,\n",
@@ -413,7 +414,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluate_models(\n",
+    "res = evaluate_models(\n",
     "    actinet_classifier,\n",
     "    bbaa_classifier,\n",
     "    X_actinet,\n",
@@ -428,6 +429,126 @@
     "    out_dir=\"outputs/actinet_vs_bbaa\",\n",
     "    verbose=True,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_bbaa = pd.read_pickle(\"outputs/actinet_vs_bbaa/rf_results.pkl\")\n",
+    "results_actinet = pd.read_pickle(\"outputs/actinet_vs_bbaa/actinet_results.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "    'accelerometer': {'y': np.hstack(results_bbaa[\"Y_true\"]), \n",
+    "                      'y_pred': np.hstack(results_bbaa[\"Y_pred\"]), \n",
+    "                      'pid': np.hstack(results_bbaa[\"group\"])\n",
+    "                      },\n",
+    "    'actinet': {'y': np.hstack(results_actinet[\"Y_true\"]), \n",
+    "                'y_pred': np.hstack(results_actinet[\"Y_pred\"]), \n",
+    "                'pid': np.hstack(results_actinet[\"group\"])\n",
+    "                }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_metrics(y_true, y_pred):\n",
+    "    accuracy = accuracy_score(y_true, y_pred)\n",
+    "    f1 = f1_score(y_true, y_pred, average='macro')\n",
+    "    kappa = cohen_kappa_score(y_true, y_pred)\n",
+    "    return accuracy, f1, kappa\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "for model, model_data in tqdm(data.items()):\n",
+    "    for pid in np.unique(model_data['pid']):\n",
+    "        mask = model_data['pid'] == pid\n",
+    "        y_true = model_data['y'][mask]\n",
+    "        y_pred = model_data['y_pred'][mask]\n",
+    "        accuracy, f1, kappa = calculate_metrics(y_true, y_pred)\n",
+    "        results.append({'Participant': pid, 'Model': model, \n",
+    "                        'Accuracy': accuracy, 'Macro F1': f1, 'Cohen Kappa': kappa})\n",
+    "\n",
+    "results = pd.DataFrame(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by model and calculate median, Q1, and Q3\n",
+    "summary = results.groupby('Model')[['Accuracy', \n",
+    "                                    'Macro F1', \n",
+    "                                    'Cohen Kappa']].agg(lambda x: f\"{np.median(x):.3f} \" + \n",
+    "                                                                  f\"({np.quantile(x, .25):.3f}, \" + \n",
+    "                                                                  f\"{np.quantile(x, .75):.3f})\")\n",
+    "\n",
+    "summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_confusion_matrix(y_true, y_pred, model):   \n",
+    "    # Calculate confusion matrix\n",
+    "    cm = confusion_matrix(y_true, y_pred, normalize='true')  # Normalized confusion matrix\n",
+    "    \n",
+    "    # Plot confusion matrix\n",
+    "    plt.figure(figsize=(8, 8))\n",
+    "    sns.heatmap(cm, annot=True, fmt='.3f', cbar=False)\n",
+    "    plt.title(f'Confusion Matrix - {model}')\n",
+    "    plt.xlabel('Predicted Label')\n",
+    "    plt.ylabel('True Label')\n",
+    "    \n",
+    "    plt.xticks(ticks=np.arange(len(cm))+0.5, labels=np.unique(y_true))\n",
+    "    plt.yticks(ticks=np.arange(len(cm))+0.5, labels=np.unique(y_true))\n",
+    "\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_confusion_matrix(data['accelerometer']['y'], data['accelerometer']['y_pred'], 'accelerometer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_confusion_matrix(data['actinet']['y'], data['actinet']['y_pred'], 'actinet')"
    ]
   }
  ],
