Improved visualisation of model comparison

--- a/EvaluateModel.ipynb
+++ b/EvaluateModel.ipynb
@@ -507,28 +507,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def plot_confusion_matrix(y_true, y_pred, model):   \n",
     "    # Calculate confusion matrix\n",
     "    cm = confusion_matrix(y_true, y_pred, normalize='true')  # Normalized confusion matrix\n",
     "    \n",
     "    # Plot confusion matrix\n",
     "    plt.figure(figsize=(8, 8))\n",
-    "    sns.heatmap(cm, annot=True, fmt='.3f', cbar=False)\n",
-    "    plt.title(f'Confusion Matrix - {model}')\n",
+    "    sns.heatmap(cm, annot=True, fmt='.3f', cbar=False, annot_kws={\"size\": 16})\n",
+    "    plt.title(f'Confusion Matrix - {model}', fontsize=20)\n",
     "    plt.xlabel('Predicted Label')\n",
     "    plt.ylabel('True Label')\n",
     "    \n",
-    "    plt.xticks(ticks=np.arange(len(cm))+0.5, labels=np.unique(y_true))\n",
-    "    plt.yticks(ticks=np.arange(len(cm))+0.5, labels=np.unique(y_true))\n",
+    "    plt.xticks(ticks=np.arange(len(cm))+0.5, labels=np.unique(y_true), fontsize=14)\n",
+    "    plt.yticks(ticks=np.arange(len(cm))+0.5, labels=np.unique(y_true), fontsize=14)\n",
     "\n",
     "    plt.show()"
    ]
@@ -550,6 +541,59 @@
    "source": [
     "plot_confusion_matrix(data['actinet']['y'], data['actinet']['y_pred'], 'actinet')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_model_performance(metric='Macro F1', modulus=0):\n",
+    "    # Create a boxplot overlay without outliers\n",
+    "    sns.boxplot(x=\"Model\", y=metric, hue=\"Model\", data=results, width=0.3, showfliers=False)\n",
+    "\n",
+    "    # Create a stripplot for the jittered points\n",
+    "    sns.stripplot(x=\"Model\", y=metric, data=results, \n",
+    "                  jitter=True, color='black', alpha=0.3)\n",
+    "\n",
+    "    # Draw lines between points for each participant\n",
+    "    i = 0\n",
+    "    for pid in results['Participant'].unique():\n",
+    "        if modulus and i%modulus == 0:\n",
+    "            pid_df = results[results['Participant'] == pid]\n",
+    "            plt.plot(pid_df['Model'], pid_df[metric], marker='', \n",
+    "                     linestyle='-', color='grey', alpha=0.3)\n",
+    "        i += 1\n",
+    "\n",
+    "    plt.title(f\"Comparison of {metric} between\\naccelerometer and actinet models\", fontsize=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_model_performance('Accuracy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_model_performance('Macro F1', 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_model_performance('Cohen Kappa', 0)"
+   ]
   }
  ],
  "metadata": {
@@ -559,7 +603,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.18"
   }
  },
