Improve train model notebook

--- a/TrainModel.ipynb
+++ b/TrainModel.ipynb
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We call the fit function to train the classifier on the training data. This will save the best weights at the provided location during the training folds."
+    "We optionally subset the data, to smoke test"
    ]
   },
   {
@@ -153,25 +153,25 @@
     "        idx = np.random.choice(len(X), n_samples, replace=False)\n",
     "        X, Y, pid, T = X[idx], Y[idx], pid[idx], T[idx]\n",
     "    \n",
-    "    return X, Y, pid, T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return X, Y, pid, T\n",
+    "\n",
     "# X, Y, pid, T = subset_data(X, Y, pid, T, None, 10)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We call the fit function to train the classifier on the training data. This will save the best weights at the provided location during the training folds."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifier.fit(X, Y, pid, T, f\"models/c24_rw_{datetime.now().strftime('%Y%m%d')}.pt\", n_splits=5)"
+    "classifier.fit(X, Y, pid, T, f\"models/c24_rw_{datetime.now().strftime('%Y%m%d')}.pt\", n_splits=1)"
    ]
   },
   {
@@ -297,15 +297,6 @@
    "outputs": [],
    "source": [
     "p = plotTimeSeries(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p = plotTimeSeries(loaded_classifier.predict_from_frame(data, 100, False))"
    ]
   }
  ],
