Add bland-altman plots to evaluation

--- a/EvaluateModel.ipynb
+++ b/EvaluateModel.ipynb
@@ -324,6 +324,24 @@
     "generate_confusion_matrices(results_df, group_by=\"Sex\", save_path=\"outputs/actinet_vs_bbaa/by_sex.pdf\")\n",
     "generate_confusion_matrices(results_df, group_by=\"Age Band\", save_path=\"outputs/actinet_vs_bbaa/by_age.pdf\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bland-Altman plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_bland_altman_plots(results_df, save_path=\"outputs/actinet_vs_bbaa/bland_altman/full_population.pdf\")\n",
+    "generate_bland_altman_plots(results_df, group_by=\"Sex\", save_path=\"outputs/actinet_vs_bbaa/bland_altman\")\n",
+    "generate_bland_altman_plots(results_df, group_by=\"Age Band\", save_path=\"outputs/actinet_vs_bbaa/bland_altman\")"
+   ]
   }
  ],
  "metadata": {
