Update bland altman plots to share y axis

--- a/EvaluateModel.ipynb
+++ b/EvaluateModel.ipynb
@@ -350,8 +350,11 @@
    "outputs": [],
    "source": [
     "generate_bland_altman_plots(results_df, save_path=\"outputs/actinet_vs_bbaa/bland_altman/full_population.pdf\")\n",
-    "generate_bland_altman_plots(results_df, group_by=\"Sex\", save_path=\"outputs/actinet_vs_bbaa/bland_altman\")\n",
-    "generate_bland_altman_plots(results_df, group_by=\"Age Band\", save_path=\"outputs/actinet_vs_bbaa/bland_altman\")"
+    "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Female\"], subset=\"female\",\n",
+    "                            save_path=\"outputs/actinet_vs_bbaa/bland_altman/by_sex_female.pdf\")\n",
+    "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Male\"], subset=\"male\",\n",
+    "                            save_path=\"outputs/actinet_vs_bbaa/bland_altman/by_sex_male.pdf\")\n",
+    "generate_bland_altman_plots(results_df, group_by=\"Age Band\", save_path=\"outputs/actinet_vs_bbaa/bland_altman/by_age.pdf\")"
    ]
   }
  ],
