Allow for training of classifier with different epoch lengths in jupyter notebook

--- a/TrainModel.ipynb
+++ b/TrainModel.ipynb
@@ -121,6 +121,7 @@
     "    labels = np.unique(Y),\n",
     "    batch_size=1000,\n",
     "    device=\"cuda:0\",\n",
+    "    window_sec=WINSEC,\n",
     "    verbose=True\n",
     ")\n",
     "\n",
@@ -171,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifier.fit(X, Y, pid, T, f\"models/c24_rw_{datetime.now().strftime('%Y%m%d')}.pt\", n_splits=1)"
+    "classifier.fit(X, Y, pid, T, f\"models/c24_rw_{WINSEC}s_{datetime.now().strftime('%Y%m%d')}.pt\", n_splits=1)"
    ]
   },
   {
@@ -187,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifier_file_name = f\"models/ssl_ukb_c24_rw_{datetime.now().strftime('%Y%m%d')}.joblib.lzma\""
+    "classifier_file_name = f\"models/ssl_ukb_c24_rw_{WINSEC}s_{datetime.now().strftime('%Y%m%d')}.joblib.lzma\""
    ]
   },
   {
