Clean up notebooks

--- a/EvaluateModel.ipynb
+++ b/EvaluateModel.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evaluate Model"
+    "# Evaluate Model\n",
+    "\n",
+    "This notebook compares the performance of the trained ActiNet model to a balanced random forest model, similar to the pypi:accelerometer model."
    ]
   },
   {
@@ -19,7 +21,6 @@
     "import sys\n",
     "from imblearn.ensemble import BalancedRandomForestClassifier\n",
     "import os\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "sys.path.append(\"src\")\n",
     "from actinet.models import ActivityClassifier\n",
