--- a/TrainModel.ipynb
+++ b/TrainModel.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# End-to-end training of Actinet model using Capture-24\n",
+    "# End-to-end training of ActiNet model using Capture-24\n",
     "\n",
-    "This notebook fine tures the final layers of a self-supervised Resnet18 on the Capture-24 dataset for the Walsmley label annotations."
+    "This notebook shows how to fine-tune the final layer of the modified self-supervised ResNet-18 model on the Capture-24 dataset for the Walsmley label annotations."
    ]
   },
   {
