Improve model evaluation

--- a/EvaluateModel.ipynb
+++ b/EvaluateModel.ipynb
@@ -21,6 +21,7 @@
     "import sys\n",
     "from imblearn.ensemble import BalancedRandomForestClassifier\n",
     "import os\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "sys.path.append(\"src\")\n",
     "from actinet.models import ActivityClassifier\n",
@@ -262,6 +263,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Paired t-test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import ttest_rel\n",
+    "\n",
+    "metrics = ['Accuracy', 'Balanced Accuracy', 'Cohen Kappa', 'Macro F1']\n",
+    "p_values = {}\n",
+    "\n",
+    "for metric in metrics:\n",
+    "    acc_values = results_df.loc[results_df['Model'] == 'accelerometer', metric].values\n",
+    "    actinet_values = results_df.loc[results_df['Model'] == 'actinet', metric].values\n",
+    "    _, p_value = ttest_rel(acc_values, actinet_values)\n",
+    "    p_values[metric] = p_value\n",
+    "\n",
+    "p_values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Difference boxplots"
    ]
   },
@@ -307,7 +335,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_boxplots(results_df, 'Age Band')"
+    "def plot_boxplots(df, x, y='Macro F1', hue='Model'):\n",
+    "    \"\"\"Plots boxplots of model performance by a specified variable\"\"\"\n",
+    "    _, ax = plt.subplots(figsize=(5, 3), dpi=1000)\n",
+    "    with sns.color_palette(\"Set1\"):\n",
+    "        sns.boxplot(data=df, x=x, y=y, hue=hue, ax=ax)\n",
+    "    ax.set_xlabel(\"Age Band\")\n",
+    "    ax.set_ylabel(f\"Cohen's kappa score\")\n",
+    "    plt.title(f\"Performance by {x}\")\n",
+    "    plt.show()"
    ]
   },
   {
@@ -316,7 +352,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_boxplots(results_df, 'Sex')"
+    "plot_boxplots(results_df, 'Age Band', y=\"Cohen Kappa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_boxplots(results_df, 'Sex',  y=\"Cohen Kappa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by model and calculate mean and standard deviation\n",
+    "results_df.groupby(['Age Band', 'Model'])[['Cohen Kappa']].agg(lambda x: f\"{np.mean(x):.3f} \" + \n",
+    "                                                                  f\"± {np.std(x):.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by model and calculate mean and standard deviation\n",
+    "results_df.groupby(['Sex', 'Model'])[['Cohen Kappa']].agg(lambda x: f\"{np.mean(x):.3f} \" + \n",
+    "                                                                  f\"± {np.std(x):.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_df.head()"
    ]
   },
   {
@@ -324,6 +400,47 @@
    "metadata": {},
    "source": [
     "Confusion matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_confusion_matrices(results_df, group_by=None, save_path=None, fontsize=20):\n",
+    "    \"\"\"Generates and plots confusion matrices for different subgroups.\"\"\" \n",
+    "    if group_by is None:  # Full population\n",
+    "        fig, axs = plt.subplots(1, 2, sharey=True, figsize=(12, 6), dpi=800)\n",
+    "        fig.suptitle(\"Confusion matrices for full Capture-24 population\\nusing 5-fold group cross-validation\", \n",
+    "                     fontsize=fontsize)\n",
+    "        \n",
+    "        y_true_bbaa, y_pred_bbaa, y_true_actinet, y_pred_actinet, _ = build_confusion_matrix_data(results_df)\n",
+    "        \n",
+    "        plot_confusion_matrix(y_true_bbaa, y_pred_bbaa, 'accelerometer', ax=axs[0], fontsize=fontsize*0.8)\n",
+    "        plot_confusion_matrix(y_true_actinet, y_pred_actinet, 'actinet', ax=axs[1], fontsize=fontsize*0.8)\n",
+    "        fig.tight_layout()\n",
+    "        plot_and_save_fig(fig, save_path)\n",
+    "    \n",
+    "    else:\n",
+    "        unique_groups = results_df[group_by].cat.categories\n",
+    "        fig = plt.figure(figsize=(12, 6*len(unique_groups)), dpi=800, constrained_layout=True)\n",
+    "        fig.suptitle(f\"Confusion matrices for different {group_by.lower()} in \" +\n",
+    "                     \"Capture-24 population\\nusing 5-fold group cross-validation\", fontsize=fontsize)\n",
+    "\n",
+    "        subfigs = fig.subfigures(nrows=len(unique_groups), ncols=1)\n",
+    "        \n",
+    "        for group, subfig in zip(unique_groups, subfigs):\n",
+    "            y_true_bbaa, y_pred_bbaa, y_true_actinet, y_pred_actinet, population =\\\n",
+    "                build_confusion_matrix_data(results_df, **{group_by.replace(' ', '_').lower(): group})\n",
+    "\n",
+    "            subfig.suptitle(f\"{group_by}: {group} (n = {population})\", fontsize=fontsize*0.9)\n",
+    "            axs = subfig.subplots(nrows=1, ncols=2, sharey=True)\n",
+    "\n",
+    "            plot_confusion_matrix(y_true_bbaa, y_pred_bbaa, 'accelerometer', ax=axs[0], fontsize=fontsize*0.8)\n",
+    "            plot_confusion_matrix(y_true_actinet, y_pred_actinet, 'actinet', ax=axs[1], fontsize=fontsize*0.8)\n",
+    "        \n",
+    "        plot_and_save_fig(fig, save_path)"
    ]
   },
   {
