--- a/Re-TrainModel.ipynb
+++ b/Re-TrainModel.ipynb
@@ -145,18 +145,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "eefc79ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = loaded_classifier.predict_from_frame(data, 100, True,'5H', True)\n",
+    "p = plotTimeSeries(y, \"Single sleep block per day, minimum 5 hour sleep\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bd50def",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = loaded_classifier.predict_from_frame(data, 100, True, None, False)\n",
+    "p = plotTimeSeries(y, \"Keep naps, no minimum sleep duration\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "42347e48",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = loaded_classifier.predict_from_frame(data, 100, True, True)\n",
-    "p = plotTimeSeries(y)"
+    "y = loaded_classifier.predict_from_frame(data, 100, True, '45min', False)\n",
+    "p = plotTimeSeries(y, \"Keep naps, minimum 45 min sleep\")"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "actinet",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
