model name underscores to hyphens

--- a/Re-TrainModel.ipynb
+++ b/Re-TrainModel.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifier_file_name = f\"models/ssl_ukb_c24_rw_{WINSEC}s_{datetime.now().strftime('%Y%m%d')}.joblib.lzma\""
+    "classifier_file_name = f\"models/ssl-ukb-c24-rw-{WINSEC}s-{datetime.now().strftime('%Y%m%d')}.joblib.lzma\""
    ]
   },
   {
@@ -145,23 +145,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "342dda28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = loaded_classifier.predict_from_frame(data, 100, True, None, False)\n",
+    "p = plotTimeSeries(y, \"Keep naps, no minimum sleep duration\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "eefc79ef",
    "metadata": {},
    "outputs": [],
    "source": [
     "y = loaded_classifier.predict_from_frame(data, 100, True,'5H', True)\n",
     "p = plotTimeSeries(y, \"Single sleep block per day, minimum 5 hour sleep\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2bd50def",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = loaded_classifier.predict_from_frame(data, 100, True, None, False)\n",
-    "p = plotTimeSeries(y, \"Keep naps, no minimum sleep duration\")"
    ]
   },
   {
