--- a/TrainModel.ipynb
+++ b/TrainModel.ipynb
@@ -188,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifier_file_name = f\"models/ssl_ukb_c24_rw_{WINSEC}s_{datetime.now().strftime('%Y%m%d')}.joblib.lzma\""
+    "classifier_file_name = f\"models/ssl-ukb-c24-rw-{WINSEC}s-{datetime.now().strftime('%Y%m%d')}.joblib.lzma\""
    ]
   },
   {
