Add random forest classifier class

--- a/EvaluateModel.ipynb
+++ b/EvaluateModel.ipynb
@@ -18,13 +18,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from glob import glob\n",
-    "import sys\n",
-    "from imblearn.ensemble import BalancedRandomForestClassifier\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "sys.path.append(\"src\")\n",
-    "from actinet.models import ActivityClassifier\n",
+    "from actinet.models import ActivityClassifier, RFActivityClassifier\n",
     "from actinet.prepare import load_all_and_make_windows, extract_accelerometer_features, \\\n",
     "    prepare_accelerometer_data\n",
     "from actinet.evaluate import evaluate_models\n",
@@ -135,7 +132,9 @@
     "bbaa_res_path = \"outputs/actinet_vs_bbaa/rf_results.pkl\"\n",
     "\n",
     "if not os.path.exists(actinet_res_path) or not os.path.exists(bbaa_res_path):\n",
-    "    bbaa_classifier = BalancedRandomForestClassifier(\n",
+    "    bbaa_classifier = RFActivityClassifier(\n",
+    "        winsec=WINSEC,\n",
+    "        labels=ACTIVITY_LABELS,\n",
     "        n_estimators=1000,\n",
     "        oob_score=True,\n",
     "        sampling_strategy=\"not minority\",\n",
