better uniformity in code

--- a/Re-TrainModel.ipynb
+++ b/Re-TrainModel.ipynb
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "classifier.labels = old_classifier.labels\n",
-    "classifier.hmms = old_classifier.hmms\n",
+    "classifier.hmm = old_classifier.hmm\n",
     "classifier.model_weights = old_classifier.model_weights"
    ]
   },
